# OpenCE

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
installer/: build-installer.ps1
installer/setup/: Cargo.toml  build.rs
installer/setup/src/: main.rs
src/: anticheat.rs  asm_x86.rs  assembler.rs  capture.rs  ce_import.rs  inject.rs  internals.rs  lcu.rs  lcu_ws.rs  main.rs  memory.rs  pe.rs  pointer.rs  process.rs  proxy.rs  redirect.rs  scan.rs  script.rs  unity.rs  value.rs
tools/iconize/: Cargo.toml
tools/iconize/src/: main.rs
