[package]
name = "opence"
version = "0.1.0"
edition = "2021"
description = "OpenCE - um scanner/editor de memoria open-source em Rust (estilo Cheat Engine)"

[dependencies]
eframe = "0.28"
egui = "0.28"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_Security",
]

[profile.release]
opt-level = 3
lto = true
