[package]
name = "quarry"
version = "0.1.0"
edition = "2021"
description = "Quarry - analise de jogos/software: scanner de memoria + proxy de interceptacao HTTPS, em Rust"

[dependencies]
eframe = "0.28"
egui = "0.28"

# Proxy HTTPS de interceptacao (Kernel Exploring)
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "time"] }
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "server", "http1"] }
http-body-util = "0.1"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "ring", "webpki-tokio", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rcgen = "0.13"
regex = "1"

# Persistencia da cheat table (.qct)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Memory Viewer: disassembler x86-64 (Rust puro)
iced-x86 = "1"

# Dialogos nativos de abrir/salvar arquivo
rfd = "0.14"

# Camada de scripting / automacao (motor em Rust puro)
rhai = "1"

# WebSocket cliente (stream de eventos do LCU — WAMP sobre wss)
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
# Embute o icone (.ico) e o manifesto (requer Admin em release) no quarry.exe.
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
